@@ -1,0 +1,11 @@
+Title: Multisite can now set rotation view permissions for NagVis
+Level: 1
+Component: wato
+Version: 1.2.3i8
+Date: 1386614980
+Class: feature
+
+When using multisite to controll the users permissions within NagVis,
+the read access to rotations could not be controlled via Multisite.
+The permission for this has been added now. This change only applies
+when used with the newest NagVis version (currently daily build).
