@@ -13,6 +13,7 @@
     * 0307 FIX: Increased performance of multisite GUI with a large userbase...
 
     WATO:
+    * 0308 Multisite can now set rotation view permissions for NagVis...
     * 0057 FIX: Fix exception in WATO host editor on custom tag without topic...
 
     Reporting & Availability:
